# Jjaeng

./: .SRCINFO  AGENTS.md  Cargo.toml  JJAENG_SCREEN_RECORDING_STRATEGY.md  LICENSE-MIT  NOTICE  PKGBUILD  README.ko.md  README.md
aur/jjaeng-bin/: .SRCINFO  PKGBUILD
aur/jjaeng-ocr-models/: .SRCINFO  PKGBUILD
crates/jjaeng-cli/: Cargo.toml
crates/jjaeng-cli/src/: main.rs
crates/jjaeng-cli/tests/: cli.rs
crates/jjaeng-core/: Cargo.toml
crates/jjaeng-core/src/: history.rs  identity.rs  lib.rs  notification.rs  process_timeout.rs  service.rs  style.rs
crates/jjaeng-core/src/capture/: mod.rs
crates/jjaeng-core/src/clipboard/: mod.rs
crates/jjaeng-core/src/config/: mod.rs
crates/jjaeng-core/src/editor/: mod.rs
crates/jjaeng-core/src/editor/tools/: blur.rs  mod.rs
crates/jjaeng-core/src/input/: navigation.rs  text_input.rs
crates/jjaeng-core/src/ocr/: mod.rs
crates/jjaeng-core/src/preview/: geometry.rs  placement.rs  shell.rs
crates/jjaeng-core/src/recording/: mod.rs
crates/jjaeng-core/src/state/: event.rs  machine.rs  model.rs
crates/jjaeng-core/src/storage/: mod.rs
crates/jjaeng-core/src/theme/: mod.rs
crates/jjaeng-daemon/: Cargo.toml
crates/jjaeng-daemon/src/: main.rs
crates/jjaeng-ui/: Cargo.toml  build.rs
crates/jjaeng-ui/resources/: jjaeng.gresource.xml
crates/jjaeng-ui/resources/hicolor/: index.theme
crates/jjaeng-ui/src/: lib.rs
crates/jjaeng-ui/src/app/: actions.rs  adaptive.rs  bootstrap.rs  editor_history.rs  editor_popup.rs  editor_runtime.rs  editor_text_runtime.rs  editor_viewport.rs  history_runtime.rs  hover_controls.rs  hypr.rs  input_bridge.rs  launchpad.rs  launchpad_actions.rs  layout.rs  lifecycle.rs  mod.rs  ocr_support.rs  preview_runtime.rs  recording_controls.rs  recording_prompt.rs  recording_result.rs  runtime_css.rs  runtime_support.rs  window_state.rs  worker.rs
crates/jjaeng-ui/src/app/editor_popup/: geometry.rs  interaction.rs  output.rs  render.rs
crates/jjaeng-ui/src/app/editor_runtime/: canvas.rs  toolbar.rs  window.rs
crates/jjaeng-ui/src/app/editor_runtime/wiring/: dialog.rs  gestures.rs  shortcuts.rs  tools.rs  viewport.rs
crates/jjaeng-ui/src/app/runtime_support/: session.rs  startup.rs  window_runtime.rs
crates/jjaeng-ui/src/ui/: mod.rs  widgets.rs
docs/: REFRACTOR_PLAN.md  USER_GUIDE.ko.md  USER_GUIDE.md  WAYBAR.md
scripts/: jjaeng-waybar-status.sh
