[workspace]
members = [
  "crates/jjaeng-core",
  "crates/jjaeng-ui",
  "crates/jjaeng-daemon",
  "crates/jjaeng-cli",
]
default-members = ["crates/jjaeng-cli"]
resolver = "2"

[workspace.package]
version = "0.6.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
gtk4 = "0.10.3"
image = "0.25.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
ocr-rs = { git = "https://github.com/BitYoungjae/rust-paddle-ocr.git", branch = "next" }
notify-rust = "4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
glib-build-tools = "0.21"
