[package]
name = "jjaeng-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core domain, storage, IPC, and shared services for Jjaeng"
repository = "https://github.com/chllming/Jjaeng"
homepage = "https://github.com/chllming/Jjaeng"

[dependencies]
gtk4.workspace = true
image.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
ocr-rs.workspace = true
notify-rust.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
