[package]
name = "jjaeng-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GTK UI runtime for Jjaeng"
repository = "https://github.com/chllming/Jjaeng"
homepage = "https://github.com/chllming/Jjaeng"

[dependencies]
jjaeng-core = { path = "../jjaeng-core" }
gtk4.workspace = true
image.workspace = true
serde_json.workspace = true
tracing.workspace = true

[build-dependencies]
glib-build-tools.workspace = true
